manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app-dp
  labels:
    app: health-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      env: prod
  template:
    metadata:
      labels:
        env: prod
    spec:
      containers:
        - name: health-app
          image: ggoofie/otus-microservices-hw3:latest
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
