manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-app-svc
spec:
  selector:
    env: prod
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
